--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@woowacourse/javascript-racingcar",
   "version": "1.0.0",
-  "description": "우아한테크코스 웹 프론트엔드 레벨1 자동차 경주 미션",
+  "description": "우아한테크코스 웹 프론트엔드 온보딩 미션 - 계산기",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "npm run build-prod && node dist/bundle.js",
     "build-dev": "webpack --mode development",
