--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build-prod && node dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,14 @@
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-env": "^7.22.9",
     "@types/jest": "^29.2.5",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.31.0",
     "esm": "^3.2.25",
-    "jest": "^29.3.1",
+    "jest": "^29.6.1",
     "prettier": "^2.8.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
