--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build-prod && node dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-env": "^7.20.2",
     "@types/jest": "^29.2.5",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
