--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "우아한테크코스 웹 프론트엔드 레벨1 자동차 경주 미션",
 	"main": "src/index.js",
 	"scripts": {
-		"start": "live-server src --port=3000",
+		"start": "npx webpack serve",
 		"build-dev": "npm run build-prod && node dist/bundle.js",
 		"build-prod": "webpack --mode production",
 		"test": "jest --watch"
