--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
-    "eslint": "^8.31.0",
-    "esm": "^3.2.25",
-    "jest": "^29.3.1",
-    "prettier": "^2.8.2",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5"
   },
   "jest": {
     "transform": {
