--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@woowacourse/javascript-racingcar",
+  "name": "js-jest-calculator",
   "version": "1.0.0",
-  "description": "우아한테크코스 웹 프론트엔드 레벨1 자동차 경주 미션",
+  "description": "jest를 이용해 테스트해보는 계산기",
   "main": "src/index.js",
   "scripts": {
     "start": "npm run build-prod && node dist/bundle.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/woowacourse/javascript-racingcar.git"
+    "url": "git+https://github.com/jelly-garden/js-jest-calculator.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/woowacourse/javascript-racingcar/issues"
+    "url": "https://github.com/jelly-garden/js-jest-calculator/issues"
   },
-  "homepage": "https://github.com/woowacourse/javascript-racingcar#readme",
+  "homepage": "https://github.com/jelly-garden/js-jest-calculator#readme",
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
