--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "start": "node src/index.js",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --no-cache"
   },
   "devDependencies": {
-    "vite": "^6.1.0",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
-    "jest": "^29.6.0"
+    "jest": "^29.6.0",
+    "vite": "^6.0.5"
   },
   "jest": {
     "transform": {
